--- a/wpf_weather_forecast_application.csproj
+++ b/wpf_weather_forecast_application.csproj
@@ -7,4 +7,9 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="ReactiveProperty" Version="8.0.5" />
+  </ItemGroup>
+
 </Project>
