--- a/wpf_weather_forecast_application.csproj
+++ b/wpf_weather_forecast_application.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="ReactiveProperty" Version="8.0.5" />
   </ItemGroup>
